Fixing design issue (menu & footer too short)

--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  text-align: left;
 }
 
 .login h1 {
